--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -6,6 +6,11 @@
 
 <h2>Index</h2>
 
+<form asp-action="Index" method="get">
+    <input type="text" name="searchString" placeholder="Search by name" />
+    <button type="submit">Search</button>
+</form>
+
 <p>
     @Html.ActionLink("Create New", "Create", "User")
 </p>
